# libssa

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  FEATURES.md  MANIFEST.in  Makefile  README.md  codemeta.json  libssa.py  libssa2.py  paper.bib  paper.md  pyproject.toml  requirements.txt
.github/workflows/: publish-as-package.yaml  publish-to-pypi.yaml  publish-to-testpypi.yaml
doc/: readme.html  tree.html
doc/changelog_template/: CHANGELOG.md.j2
env/: __init__.py  equations.py  export.py  functions.py  gui.py  import.py  imports.py  spectra.py  worker.py
env/config/: __init__.py  ion.py
env/gui/: libssagui.py  libssagui.ui
libssa/: README_GUI.md  libssa2.py
libssa/env/: equations.py  export.py  functions.py  imports.py  spectra.py
libssa/env/config/: ion.py
libssa/env/gui/: libssagui.py
pic/: __init__.py  libssa.ui  libssa_gui.py  libssagui.py
src/: __version__.py
src/libssa/: README_GUI.md  libssa2.py
src/libssa/env/: __init__.py  equations.py  export.py  functions.py  imports.py  spectra.py
src/libssa/env/config/: __init__.py  ion.py
src/libssa/env/gui/: libssagui.py  libssagui.ui
src/tests/: test_export_areas.py  test_load_spectra.py  test_startup.py
tests/: test_export_areas.py  test_load_spectra.py  test_startup.py
