[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "libssa"
version = "2.5.1b5"
description = "LIBSsa: an open source software for analyzing LIBS spectra"
authors = [{ name = "Kleydson Stenio", email = "9257942+kstenio@users.noreply.github.com" }]
readme = "README.md"
license = {file="LICENSE.txt"}
keywords = ['python', 'libs', 'spectroscopy']
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.9,<3.12"
dependencies = [
    "markdown<=3.4.3",
    "numpy<=1.25.1",
    "openpyxl<=3.1.2",
    "pandas<=2.0.3",
    "psutil<=5.9.5",
    "pyqtgraph<=0.13.3",
    "pyside6<=6.4.3",
    "scikit-learn<=1.3.0",
    "scipy<=1.11.1"
]

[project.scripts]
libssa-gui = "libssa.libssa2:spawn_gui"

[project.urls]
Homepage = "https://github.com/kstenio/libssa"
Documentation = "https://kstenio.github.io/libssa/"

[tool.commitizen]
annotated_tag = true
bump_message = "ci(auto-version-bump): updating libssa from $current_version → $new_version [skip ci]"
changelog_file = "CHANGELOG.md"
changelog_incremental = true
name = "cz_customize"
pre_bump_hooks = ["uv sync"]
tag_format = "v$version"
template = "doc/changelog_template/CHANGELOG.md.j2"
update_changelog_on_bump = true
version_files = ["src/__version__.py", "pyproject.toml:version"]
version_provider = "pep621"
version_scheme = "pep440"

[tool.commitizen.customize]
bump_map = {"chore" = "PATCH", "build" = "PATCH", "ci" = "PATCH", "docs" = "PATCH", "feat" = "MINOR", "fix" = "PATCH", "new" = "MAJOR", "perf" = "MINOR", "refactor" = "MINOR", "style" = "PATCH", "test" = "PATCH"}
bump_pattern = "^(chore|build|ci|docs|feat|fix|new|perf|refactor|style|test)"
change_type_map = {"chore" = "Chores", "build" = "Builds", "ci" = "Continuous Integration", "docs" = "Documentation", "feat" = "Features", "fix" = "Fix and/or Hotfixes", "new" = "New Version", "perf" = "Performance", "refactor" = "Refactoring", "style" = "Style Improvement", "test" = "Tests"}
change_type_order = ["new", "feat", "ci", "build", "fix", "perf", "refactor", "style", "docs", "test", "chore"]
changelog_pattern = "^(chore|build|ci|docs|feat|fix|new|perf|refactor|style|test)?(!)?"
commit_parser = "^((?P<change_type>chore|build|ci|docs|feat|fix|new|perf|refactor|style|test)(?:\\((?P<scope>[^()\r\n]*)\\)|\\()?(?P<breaking>!)?|\\w+!):\\s(?P<message>.*)?"

[tool.pytest.ini_options]
testpaths = ["src/tests"]

[tool.ruff]
line-length = 128
fix = true

[tool.ruff.lint]
select = [
    "I",        # isort
]
ignore = [
    "E501",     # LineTooLong
    "E731",     # DoNotAssignLambda
]

[tool.ruff.lint.isort]
length-sort = true
case-sensitive = true
split-on-trailing-comma=false

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
skip-magic-trailing-comma = true
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"
preview = true

[tool.uv]
compile-bytecode = true
resolution = "highest"
dev-dependencies = [
    "commitizen>=3.29.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "pytest-qt>=4.4.0",
    "ruff>=0.6.9",
]
